--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,7 @@ pydantic = "^1.10"
 
 
 [tool.poetry.scripts]
-pydantic-data-creator = "pydantic_data_creator.main:main"
-
+pydcreator = "scripts.run:main"
 
 [build-system]
 requires = ["poetry-core"]
