modified pydantic version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pydantic-data-creator"
-version = "0.1.1"
+version = "0.1.2"
 description = ""
 authors = ["yukikotani231 <kotani-yuki231@g.ecc.u-tokyo.ac.jp>"]
 readme = "README.md"
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 streamlit-pydantic = "^0.6.0"
-pydantic = "^1.10"
+pydantic = "<2"
 
 
 [tool.poetry.scripts]
